# SupernovaAssistant

./: .gitignore  CMakeLists.txt  Debug.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MaterialsWidget.cpp  MaterialsWidget.h  README.txt  SNAssistant.pro  SNConstants.cpp  SNConstants.h  ShipDesigner.cpp  ShipDesigner.h  ShipDesigner.ui  Toolchain-mingw32.cmake  TurnParser.cpp  TurnParser.h  application.qrc  categories.xml  item_desc_format.html  items.xml  main.cpp  resources.xml  sn.rc  supernova.sql  win32-installer.nsi
cmake/modules/: FindPoppler.cmake  FindSqlite.cmake
data/: Empire.cpp  Empire.h  ItemEffect.cpp  ItemEffect.h  Order.cpp  Order.h  Planet.cpp  Planet.h  SNItem.cpp  SNItem.h  ShipDesign.cpp  ShipDesign.h  System.cpp  System.h  WarpPoint.cpp  WarpPoint.h
delegates/: GenericDelegate.cpp  GenericDelegate.h  IntegerColumnDelegate.cpp  IntegerColumnDelegate.h  ItemDelegate.cpp  ItemDelegate.h
dialogs/: ChangeEmpireDialog.cpp  ChangeEmpireDialog.h  ChangeEmpireDialog.ui  ItemBrowser.cpp  ItemBrowser.h  ItemBrowser.ui  ItemConflictDialog.cpp  ItemConflictDialog.h  ItemConflictDialog.ui  NewEmpireDialog.cpp  NewEmpireDialog.h  NewEmpireDialog.ui  ui_ChangeEmpireDialog.h  ui_NewEmpireDialog.h
icons/: supernova.icns
models/: ComponentsModel.cpp  ComponentsModel.h  ComponentsProxyModel.cpp  ComponentsProxyModel.h  EmpiresModel.cpp  EmpiresModel.h  ItemModel.cpp  ItemModel.h  MaterialsModel.cpp  MaterialsModel.h  ShipDesignsModel.cpp  ShipDesignsModel.h
tests/: CMakeLists.txt  TurnParserTest.cpp  TurnParserTest.h  anz_test.txt  modeltest.cpp  tests.qrc
tests/data/: PMAP.txt  PMAP2.txt  PMAP3.txt  SS.txt  SS2.txt  anz_test.txt
views/: ComponentsTreeView.cpp  ComponentsTreeView.h
widgets/: ItemBrowser.cpp  ItemBrowser.h  ItemBrowser.ui  MaterialsWidget.cpp  ShipDesigner.cpp  ShipDesigner.h  ShipDesigner.ui  SystemsOverviewWidget.cpp  SystemsOverviewWidget.h  SystemsOverviewWidget.ui  WelcomeWidget.cpp  WelcomeWidget.h  WelcomeWidget.ui
win32_resources/: Toolchain-mingw32.cmake  win32-installer.nsi
win32_resources/include/: sqlite.h  sqlite3.h  sqlite3ext.h
